// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Typeahead > injection > should use render props to inject extra components 1`] = `
<div
  aria-expanded={true}
  aria-haspopup="listbox"
  aria-owns="react-autowhatever-my-search"
  className="_tc-typeahead-container_f043f2 tc-typeahead-container _container-open_f043f2 tc-typeahead-container-open"
  role="combobox"
>
  <div
    className="tc-typeahead-typeahead-input-icon _typeahead-input-container_f043f2"
  >
    <div
      className="_stack_dbc270 _justify-start_dbc270 _align-stretch_dbc270 _nowrap_dbc270 _column_dbc270 _block_dbc270 _noShrink_dbc270 _gap-x-XXS_dbc270 _gap-y-XXS_dbc270"
    >
      <span
        className="_hidden_91f55b"
      >
        <label
          className="_label_048b2f"
          htmlFor="my-search"
        />
      </span>
      <div
        className="_inputShell_bca7b9"
      >
        <input
          aria-activedescendant="react-autowhatever-my-search-section-0-item-0"
          aria-autocomplete="list"
          aria-controls="react-autowhatever-my-search"
          autoComplete="off"
          autoFocus={false}
          className="_input_876932 _typeahead-input_f043f2 tc-typeahead-typeahead-input"
          disabled={false}
          id="my-search"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          readOnly={false}
          type="text"
        />
      </div>
    </div>
  </div>
  <div
    aria-label="Suggestions"
    className="_items-container_f043f2 tc-typeahead-items-container _items-container_f043f2"
    id="react-autowhatever-my-search"
    style={
      {
        "left": "0",
        "position": "fixed",
        "top": "0",
      }
    }
    tabIndex="0"
  >
    <div
      className="_items-body_f043f2"
      style={
        {
          "maxHeight": undefined,
          "minHeight": undefined,
        }
      }
    >
      <div>
        <div>
          Searching: 
        </div>
        <div>
          Loading: 
        </div>
        <div>
          No Result: 
        </div>
        <div>
          Is Shown: 
          category 1
          category 2
        </div>
        <ul
          className="_items_f043f2"
          role="listbox"
        >
          <li
            aria-selected={false}
            id="react-autowhatever-my-search--item-0"
            onMouseDown={[Function]}
            role="option"
            style={{}}
          >
            <div
              className="_item_f043f2"
              title="category 1"
            >
              <div
                className="_item-text_f043f2"
              >
                <span
                  className="item-title _item-title_f043f2 tc-typeahead-item-title _tc-typeahead-item-title_f043f2"
                >
                  <span>
                    category 1
                  </span>
                </span>
              </div>
            </div>
          </li>
          <li
            aria-selected={false}
            id="react-autowhatever-my-search--item-1"
            onMouseDown={[Function]}
            role="option"
            style={{}}
          >
            <div
              className="_item_f043f2"
              title="category 2"
            >
              <div
                className="_item-text_f043f2"
              >
                <span
                  className="item-title _item-title_f043f2 tc-typeahead-item-title _tc-typeahead-item-title_f043f2"
                >
                  <span>
                    category 2
                  </span>
                </span>
              </div>
            </div>
          </li>
        </ul>
        <button>
          Click
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Typeahead > items > should render typeahead items with match 1`] = `
<div
  aria-expanded={true}
  aria-haspopup="listbox"
  aria-owns="react-autowhatever-my-search"
  className="_tc-typeahead-container_f043f2 tc-typeahead-container _container-open_f043f2 tc-typeahead-container-open"
  role="combobox"
>
  <div
    className="tc-typeahead-typeahead-input-icon _typeahead-input-container_f043f2"
  >
    <div
      className="_stack_dbc270 _justify-start_dbc270 _align-stretch_dbc270 _nowrap_dbc270 _column_dbc270 _block_dbc270 _noShrink_dbc270 _gap-x-XXS_dbc270 _gap-y-XXS_dbc270"
    >
      <span
        className="_hidden_91f55b"
      >
        <label
          className="_label_048b2f"
          htmlFor="my-search"
        />
      </span>
      <div
        className="_inputShell_bca7b9"
      >
        <input
          aria-activedescendant="react-autowhatever-my-search-section-0-item-0"
          aria-autocomplete="list"
          aria-controls="react-autowhatever-my-search"
          autoComplete="off"
          autoFocus={false}
          className="_input_876932 _typeahead-input_f043f2 tc-typeahead-typeahead-input"
          disabled={false}
          id="my-search"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          readOnly={false}
          type="text"
          value="le"
        />
      </div>
    </div>
  </div>
  <div
    aria-label="Suggestions"
    className="_items-container_f043f2 tc-typeahead-items-container _items-container_f043f2"
    id="react-autowhatever-my-search"
    style={
      {
        "left": "0",
        "position": "fixed",
        "top": "0",
      }
    }
    tabIndex="0"
  >
    <div
      className="_items-body_f043f2"
      style={
        {
          "maxHeight": undefined,
          "minHeight": undefined,
        }
      }
    >
      <div
        className="_section-container_f043f2 tc-typeahead-section-container"
      >
        <div
          style={{}}
        >
          <div
            className="section-header _section-header_f043f2 tc-typeahead-section-header _tc-typeahead-section-header_f043f2"
          >
            <svg
              aria-hidden={true}
              className="tc-svg-icon tc-icon _svg_bf5f45 tc-icon-name-fa fa-filter"
              focusable={false}
              name="fa fa-filter"
              pointerEvents="none"
              shapeRendering="geometricPrecision"
              title="icon"
            />
            <span
              className="section-header-title _section-header-title_f043f2 tc-typeahead-section-header-title _tc-typeahead-section-header-title_f043f2"
            >
              category 1
            </span>
          </div>
        </div>
        <ul
          className="_items_f043f2"
          role="listbox"
        >
          <li
            aria-selected={true}
            className="_item-highlighted_f043f2 tc-typeahead-item-highlighted"
            id="react-autowhatever-my-search-section-0-item-0"
            onMouseDown={[Function]}
            role="option"
          >
            <div
              className="_item_f043f2 _multiline_f043f2"
              title="le title 1"
            >
              <div
                className="_item-text_f043f2"
              >
                <span
                  className="item-title _item-title_f043f2 tc-typeahead-item-title _tc-typeahead-item-title_f043f2"
                >
                  <span>
                    <em
                      className="_highlight_0230b8"
                    >
                      le
                    </em>
                     tit
                    <em
                      className="_highlight_0230b8"
                    >
                      le
                    </em>
                     1
                  </span>
                </span>
                <p
                  className="item-description _item-description_f043f2 tc-typeahead-item-description _tc-typeahead-item-description_f043f2"
                >
                  <span>
                    description: Uxoresque est in pacto est marito est hastam nomine in eos discessura incredibi
                    <em
                      className="_highlight_0230b8"
                    >
                      le
                    </em>
                     tempus ardore.
                  </span>
                </p>
              </div>
            </div>
          </li>
          <li
            aria-selected={false}
            id="react-autowhatever-my-search-section-0-item-1"
            onMouseDown={[Function]}
            role="option"
            style={{}}
          >
            <div
              className="_item_f043f2 _multiline_f043f2"
              title="title 2 les elephants elementaires ont des aile"
            >
              <div
                className="_item-text_f043f2"
              >
                <span
                  className="item-title _item-title_f043f2 tc-typeahead-item-title _tc-typeahead-item-title_f043f2"
                >
                  <span>
                    tit
                    <em
                      className="_highlight_0230b8"
                    >
                      le
                    </em>
                     2 
                    <em
                      className="_highlight_0230b8"
                    >
                      le
                    </em>
                    s e
                    <em
                      className="_highlight_0230b8"
                    >
                      le
                    </em>
                    phants e
                    <em
                      className="_highlight_0230b8"
                    >
                      le
                    </em>
                    mentaires ont des ai
                    <em
                      className="_highlight_0230b8"
                    >
                      le
                    </em>
                  </span>
                </span>
                <p
                  className="item-description _item-description_f043f2 tc-typeahead-item-description _tc-typeahead-item-description_f043f2"
                >
                  <span>
                    description: Aut aut cum satis inter Epicuri quidem cum erat inquam controversia autem mihi utrumque Attico.
                  </span>
                </p>
              </div>
            </div>
          </li>
        </ul>
      </div>
      <div
        className="_section-container_f043f2 tc-typeahead-section-container"
      >
        <div
          style={{}}
        >
          <div
            className="section-header _section-header_f043f2 tc-typeahead-section-header _tc-typeahead-section-header_f043f2"
          >
            <svg
              aria-hidden={true}
              className="tc-svg-icon tc-icon _svg_bf5f45 tc-icon-name-fa fa-asterisk"
              focusable={false}
              name="fa fa-asterisk"
              pointerEvents="none"
              shapeRendering="geometricPrecision"
              title="icon"
            />
            <span
              className="section-header-title _section-header-title_f043f2 tc-typeahead-section-header-title _tc-typeahead-section-header-title_f043f2"
            >
              category 2
            </span>
          </div>
        </div>
        <ul
          className="_items_f043f2"
          role="listbox"
        >
          <li
            aria-selected={false}
            id="react-autowhatever-my-search-section-1-item-0"
            onMouseDown={[Function]}
            role="option"
            style={{}}
          >
            <div
              className="_item_f043f2 _multiline_f043f2"
              title="title 3"
            >
              <div
                className="_item-text_f043f2"
              >
                <span
                  className="item-title _item-title_f043f2 tc-typeahead-item-title _tc-typeahead-item-title_f043f2"
                >
                  <span>
                    tit
                    <em
                      className="_highlight_0230b8"
                    >
                      le
                    </em>
                     3
                  </span>
                </span>
                <p
                  className="item-description _item-description_f043f2 tc-typeahead-item-description _tc-typeahead-item-description_f043f2"
                >
                  <span>
                    description: In sanciatur libere audeamus exspectemus amicitia et dum ne audeamus causa monendum honesta studium va
                    <em
                      className="_highlight_0230b8"
                    >
                      le
                    </em>
                    at.
                  </span>
                </p>
              </div>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Typeahead > items > should render typeahead with loading entry 1`] = `
<div
  aria-expanded={false}
  aria-haspopup="listbox"
  aria-owns="react-autowhatever-my-search"
  className="_tc-typeahead-container_f043f2 tc-typeahead-container _loading_f043f2"
  role="combobox"
>
  <div
    className="tc-typeahead-typeahead-input-icon _typeahead-input-container_f043f2"
  >
    <div
      className="_stack_dbc270 _justify-start_dbc270 _align-stretch_dbc270 _nowrap_dbc270 _column_dbc270 _block_dbc270 _noShrink_dbc270 _gap-x-XXS_dbc270 _gap-y-XXS_dbc270"
    >
      <span
        className="_hidden_91f55b"
      >
        <label
          className="_label_048b2f"
          htmlFor="my-search"
        />
      </span>
      <div
        className="_inputShell_bca7b9"
      >
        <input
          aria-activedescendant="react-autowhatever-my-search-section-0-item-0"
          aria-autocomplete="list"
          aria-controls="react-autowhatever-my-search"
          autoComplete="off"
          autoFocus={false}
          className="_input_876932 _typeahead-input_f043f2 tc-typeahead-typeahead-input"
          disabled={false}
          id="my-search"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          readOnly={false}
          type="text"
        />
      </div>
    </div>
  </div>
  <div
    aria-label="Suggestions"
    className="_items-container_f043f2 tc-typeahead-items-container _items-container_f043f2 _container-open_f043f2"
    id="react-autowhatever-my-search"
    style={
      {
        "left": "0",
        "position": "fixed",
        "top": "0",
      }
    }
    tabIndex="0"
  >
    <div
      className="_items-body_f043f2"
      style={
        {
          "maxHeight": undefined,
          "minHeight": undefined,
        }
      }
    >
      <div
        className="_is-loading_f043f2 is-loading"
      >
        <span>
          Loading...
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Typeahead > items > should render typeahead with object items 1`] = `
<div
  aria-expanded={true}
  aria-haspopup="listbox"
  aria-owns="react-autowhatever-my-search"
  className="_tc-typeahead-container_f043f2 tc-typeahead-container _container-open_f043f2 tc-typeahead-container-open"
  role="combobox"
>
  <div
    className="tc-typeahead-typeahead-input-icon _typeahead-input-container_f043f2"
  >
    <div
      className="_stack_dbc270 _justify-start_dbc270 _align-stretch_dbc270 _nowrap_dbc270 _column_dbc270 _block_dbc270 _noShrink_dbc270 _gap-x-XXS_dbc270 _gap-y-XXS_dbc270"
    >
      <span
        className="_hidden_91f55b"
      >
        <label
          className="_label_048b2f"
          htmlFor="my-search"
        />
      </span>
      <div
        className="_inputShell_bca7b9"
      >
        <input
          aria-activedescendant="react-autowhatever-my-search-section-0-item-0"
          aria-autocomplete="list"
          aria-controls="react-autowhatever-my-search"
          autoComplete="off"
          autoFocus={false}
          className="_input_876932 _typeahead-input_f043f2 tc-typeahead-typeahead-input"
          disabled={false}
          id="my-search"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          readOnly={false}
          type="text"
        />
      </div>
    </div>
  </div>
  <div
    aria-label="Suggestions"
    className="_items-container_f043f2 tc-typeahead-items-container _items-container_f043f2"
    id="react-autowhatever-my-search"
    style={
      {
        "left": "0",
        "position": "fixed",
        "top": "0",
      }
    }
    tabIndex="0"
  >
    <div
      className="_items-body_f043f2"
      style={
        {
          "maxHeight": undefined,
          "minHeight": undefined,
        }
      }
    >
      <div
        className="_section-container_f043f2 tc-typeahead-section-container"
      >
        <div
          style={{}}
        >
          <div
            className="section-header _section-header_f043f2 tc-typeahead-section-header _tc-typeahead-section-header_f043f2"
          >
            <svg
              aria-hidden={true}
              className="tc-svg-icon tc-icon _svg_bf5f45 tc-icon-name-fa fa-filter"
              focusable={false}
              name="fa fa-filter"
              pointerEvents="none"
              shapeRendering="geometricPrecision"
              title="icon"
            />
            <span
              className="section-header-title _section-header-title_f043f2 tc-typeahead-section-header-title _tc-typeahead-section-header-title_f043f2"
            >
              category 1
            </span>
          </div>
        </div>
        <ul
          className="_items_f043f2"
          role="listbox"
        >
          <li
            aria-selected={true}
            className="_item-highlighted_f043f2 tc-typeahead-item-highlighted"
            id="react-autowhatever-my-search-section-0-item-0"
            onMouseDown={[Function]}
            role="option"
          >
            <div
              className="_item_f043f2 _multiline_f043f2"
              title="le title 1"
            >
              <div
                className="_item-text_f043f2"
              >
                <span
                  className="item-title _item-title_f043f2 tc-typeahead-item-title _tc-typeahead-item-title_f043f2"
                >
                  <span>
                    le title 1
                  </span>
                </span>
                <p
                  className="item-description _item-description_f043f2 tc-typeahead-item-description _tc-typeahead-item-description_f043f2"
                >
                  <span>
                    description: Uxoresque est in pacto est marito est hastam nomine in eos discessura incredibile tempus ardore.
                  </span>
                </p>
              </div>
            </div>
          </li>
          <li
            aria-selected={false}
            id="react-autowhatever-my-search-section-0-item-1"
            onMouseDown={[Function]}
            role="option"
            style={{}}
          >
            <div
              className="_item_f043f2 _multiline_f043f2"
              title="title 2 les elephants elementaires ont des aile"
            >
              <div
                className="_item-text_f043f2"
              >
                <span
                  className="item-title _item-title_f043f2 tc-typeahead-item-title _tc-typeahead-item-title_f043f2"
                >
                  <span>
                    title 2 les elephants elementaires ont des aile
                  </span>
                </span>
                <p
                  className="item-description _item-description_f043f2 tc-typeahead-item-description _tc-typeahead-item-description_f043f2"
                >
                  <span>
                    description: Aut aut cum satis inter Epicuri quidem cum erat inquam controversia autem mihi utrumque Attico.
                  </span>
                </p>
              </div>
            </div>
          </li>
        </ul>
      </div>
      <div
        className="_section-container_f043f2 tc-typeahead-section-container"
      >
        <div
          style={{}}
        >
          <div
            className="section-header _section-header_f043f2 tc-typeahead-section-header _tc-typeahead-section-header_f043f2"
          >
            <svg
              aria-hidden={true}
              className="tc-svg-icon tc-icon _svg_bf5f45 tc-icon-name-fa fa-asterisk"
              focusable={false}
              name="fa fa-asterisk"
              pointerEvents="none"
              shapeRendering="geometricPrecision"
              title="icon"
            />
            <span
              className="section-header-title _section-header-title_f043f2 tc-typeahead-section-header-title _tc-typeahead-section-header-title_f043f2"
            >
              category 2
            </span>
          </div>
        </div>
        <ul
          className="_items_f043f2"
          role="listbox"
        >
          <li
            aria-selected={false}
            id="react-autowhatever-my-search-section-1-item-0"
            onMouseDown={[Function]}
            role="option"
            style={{}}
          >
            <div
              className="_item_f043f2 _multiline_f043f2"
              title="title 3"
            >
              <div
                className="_item-text_f043f2"
              >
                <span
                  className="item-title _item-title_f043f2 tc-typeahead-item-title _tc-typeahead-item-title_f043f2"
                >
                  <span>
                    title 3
                  </span>
                </span>
                <p
                  className="item-description _item-description_f043f2 tc-typeahead-item-description _tc-typeahead-item-description_f043f2"
                >
                  <span>
                    description: In sanciatur libere audeamus exspectemus amicitia et dum ne audeamus causa monendum honesta studium valeat.
                  </span>
                </p>
              </div>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Typeahead > items > should render typeahead with string items 1`] = `
<div
  aria-expanded={true}
  aria-haspopup="listbox"
  aria-owns="react-autowhatever-my-search"
  className="_tc-typeahead-container_f043f2 tc-typeahead-container _container-open_f043f2 tc-typeahead-container-open"
  role="combobox"
>
  <div
    className="tc-typeahead-typeahead-input-icon _typeahead-input-container_f043f2"
  >
    <div
      className="_stack_dbc270 _justify-start_dbc270 _align-stretch_dbc270 _nowrap_dbc270 _column_dbc270 _block_dbc270 _noShrink_dbc270 _gap-x-XXS_dbc270 _gap-y-XXS_dbc270"
    >
      <span
        className="_hidden_91f55b"
      >
        <label
          className="_label_048b2f"
          htmlFor="my-search"
        />
      </span>
      <div
        className="_inputShell_bca7b9"
      >
        <input
          aria-activedescendant="react-autowhatever-my-search-section-0-item-0"
          aria-autocomplete="list"
          aria-controls="react-autowhatever-my-search"
          autoComplete="off"
          autoFocus={false}
          className="_input_876932 _typeahead-input_f043f2 tc-typeahead-typeahead-input"
          disabled={false}
          id="my-search"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          readOnly={false}
          type="text"
        />
      </div>
    </div>
  </div>
  <div
    aria-label="Suggestions"
    className="_items-container_f043f2 tc-typeahead-items-container _items-container_f043f2"
    id="react-autowhatever-my-search"
    style={
      {
        "left": "0",
        "position": "fixed",
        "top": "0",
      }
    }
    tabIndex="0"
  >
    <div
      className="_items-body_f043f2"
      style={
        {
          "maxHeight": undefined,
          "minHeight": undefined,
        }
      }
    >
      <ul
        className="_items_f043f2"
        role="listbox"
      >
        <li
          aria-selected={false}
          id="react-autowhatever-my-search--item-0"
          onMouseDown={[Function]}
          role="option"
          style={{}}
        >
          <div
            className="_item_f043f2"
            data-feature="data-feature-typeahead"
            title="category 1"
          >
            <div
              className="_item-text_f043f2"
            >
              <span
                className="item-title _item-title_f043f2 tc-typeahead-item-title _tc-typeahead-item-title_f043f2"
              >
                <span>
                  category 1
                </span>
              </span>
            </div>
          </div>
        </li>
        <li
          aria-selected={false}
          id="react-autowhatever-my-search--item-1"
          onMouseDown={[Function]}
          role="option"
          style={{}}
        >
          <div
            className="_item_f043f2"
            data-feature="data-feature-typeahead"
            title="category 2"
          >
            <div
              className="_item-text_f043f2"
            >
              <span
                className="item-title _item-title_f043f2 tc-typeahead-item-title _tc-typeahead-item-title_f043f2"
              >
                <span>
                  category 2
                </span>
              </span>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Typeahead > items > should render typeahead without items 1`] = `
<div
  aria-expanded={false}
  aria-haspopup="listbox"
  aria-owns="react-autowhatever-my-search"
  className="_tc-typeahead-container_f043f2 tc-typeahead-container"
  role="combobox"
>
  <div
    className="tc-typeahead-typeahead-input-icon _typeahead-input-container_f043f2"
  >
    <div
      className="_stack_dbc270 _justify-start_dbc270 _align-stretch_dbc270 _nowrap_dbc270 _column_dbc270 _block_dbc270 _noShrink_dbc270 _gap-x-XXS_dbc270 _gap-y-XXS_dbc270"
    >
      <span
        className="_hidden_91f55b"
      >
        <label
          className="_label_048b2f"
          htmlFor="my-search"
        />
      </span>
      <div
        className="_inputShell_bca7b9"
      >
        <input
          aria-activedescendant="react-autowhatever-my-search-section-0-item-0"
          aria-autocomplete="list"
          aria-controls="react-autowhatever-my-search"
          autoComplete="off"
          autoFocus={false}
          className="_input_876932 _typeahead-input_f043f2 tc-typeahead-typeahead-input"
          disabled={false}
          id="my-search"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          readOnly={false}
          type="text"
        />
      </div>
    </div>
  </div>
  <div
    aria-label="Suggestions"
    className="_items-container_f043f2 tc-typeahead-items-container _items-container_f043f2 _container-open_f043f2"
    id="react-autowhatever-my-search"
    style={
      {
        "left": "0",
        "position": "fixed",
        "top": "0",
      }
    }
    tabIndex="0"
  >
    <div
      className="_items-body_f043f2"
      style={
        {
          "maxHeight": undefined,
          "minHeight": undefined,
        }
      }
    >
      <div
        className="_no-result_f043f2 no-result"
      >
        <svg
          aria-hidden={true}
          className="tc-svg-icon tc-icon _svg_bf5f45 tc-icon-name-talend-fieldglass"
          focusable={false}
          name="talend-fieldglass"
          pointerEvents="none"
          shapeRendering="geometricPrecision"
          title="No results found"
        />
        <span>
          No results found
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Typeahead > position > should render search bar on the right 1`] = `
<div
  aria-expanded={false}
  aria-haspopup="listbox"
  aria-owns="react-autowhatever-my-search"
  className="_tc-typeahead-container_f043f2 tc-typeahead-container _right_f043f2"
  role="combobox"
>
  <div
    className="tc-typeahead-typeahead-input-icon _typeahead-input-container_f043f2"
  >
    <div
      className="_stack_dbc270 _justify-start_dbc270 _align-stretch_dbc270 _nowrap_dbc270 _column_dbc270 _block_dbc270 _noShrink_dbc270 _gap-x-XXS_dbc270 _gap-y-XXS_dbc270"
    >
      <span
        className="_hidden_91f55b"
      >
        <label
          className="_label_048b2f"
          htmlFor="my-search"
        />
      </span>
      <div
        className="_inputShell_bca7b9"
      >
        <input
          aria-activedescendant="react-autowhatever-my-search-section-0-item-0"
          aria-autocomplete="list"
          aria-controls="react-autowhatever-my-search"
          autoComplete="off"
          autoFocus={false}
          className="_input_876932 _typeahead-input_f043f2 tc-typeahead-typeahead-input"
          disabled={false}
          id="my-search"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          readOnly={false}
          role="searchbox"
          type="text"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Typeahead > should pass input extra props 1`] = `
<div
  aria-expanded={false}
  aria-haspopup="listbox"
  aria-owns="react-autowhatever-my-search"
  className="_tc-typeahead-container_f043f2 tc-typeahead-container _right_f043f2"
  role="combobox"
>
  <div
    className="tc-typeahead-typeahead-input-icon _typeahead-input-container_f043f2"
  >
    <div
      className="_stack_dbc270 _justify-start_dbc270 _align-stretch_dbc270 _nowrap_dbc270 _column_dbc270 _block_dbc270 _noShrink_dbc270 _gap-x-XXS_dbc270 _gap-y-XXS_dbc270"
    >
      <span
        className="_hidden_91f55b"
      >
        <label
          className="_label_048b2f"
          htmlFor="my-search"
        />
      </span>
      <div
        className="_inputShell_bca7b9"
      >
        <input
          aria-activedescendant="react-autowhatever-my-search-section-0-item-0"
          aria-autocomplete="list"
          aria-controls="react-autowhatever-my-search"
          aria-describedby="desc-id"
          aria-label="my custom label"
          autoComplete="off"
          autoFocus={false}
          className="_input_876932 _typeahead-input_f043f2 tc-typeahead-typeahead-input"
          disabled={false}
          id="my-search"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          readOnly={false}
          role="searchbox"
          type="text"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Typeahead > with toggle > should render button 1`] = `
<button
  aria-describedby="00000000-0000-4000-8000-000000000000"
  aria-label="Toggle search bar"
  className="_only-icon-cls_f043f2 tc-typeahead-toggle btn-icon-only btn btn-link"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyPress={[Function]}
  onMouseDown={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  type="button"
>
  <svg
    aria-hidden={true}
    className="tc-svg-icon tc-icon _svg_bf5f45 tc-icon-name-fa fa-search"
    focusable={false}
    name="fa fa-search"
    pointerEvents="none"
    shapeRendering="geometricPrecision"
  />
</button>
`;
